v2/lab-01/kube-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: web-ingress
spec:
  rules:
  - host: wordsmith.app.<fqdn-of-your-claster>
    http:
      paths:
      - path: /
        backend:
          serviceName: web
          servicePort: 80
